--- a/BugTrap/BugTrap.rc
+++ b/BugTrap/BugTrap.rc
@@ -783,7 +783,7 @@ END
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,4,0,0
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -801,24 +801,24 @@ BEGIN
             VALUE "Comments", "BugTrap - softwarefehler berichterstattung"
             VALUE "CompanyName", "IntelleSoft"
             VALUE "FileDescription", "BugTrap dynamic link library"
-            VALUE "FileVersion", "1, 4, 0, 0"
+            VALUE "FileVersion", "1.4.0.0"
             VALUE "InternalName", "BugTrap"
             VALUE "LegalCopyright", "Copyright © 2005-2009 IntelleSoft"
             VALUE "OriginalFilename", "BugTrap.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
         BLOCK "040904b0"
         BEGIN
             VALUE "Comments", "BugTrap - software error reporting tool"
             VALUE "CompanyName", "IntelleSoft"
             VALUE "FileDescription", "BugTrap dynamic link library"
-            VALUE "FileVersion", "1, 4, 0, 0"
+            VALUE "FileVersion", "1.4.0.0"
             VALUE "InternalName", "BugTrap"
             VALUE "LegalCopyright", "Copyright © 2005-2009 IntelleSoft"
             VALUE "OriginalFilename", "BugTrap.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
