--- a/HashLib/HashLib.rc
+++ b/HashLib/HashLib.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,3
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "MD4, MD5, SHA1, TigerTree classes"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "HashLib DLL"
-            VALUE "FileVersion", "1, 0, 0, 3"
+            VALUE "FileVersion", "1.0.0.3"
             VALUE "InternalName", "HashLib"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2008-2011. All rights reserved."
             VALUE "OriginalFilename", "HashLib.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
