--- a/KeywordTest/KeywordTest.rc
+++ b/KeywordTest/KeywordTest.rc
@@ -65,7 +65,7 @@ END
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,1
- PRODUCTVERSION 2,5,5,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -82,12 +82,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Keyword Test"
-            VALUE "FileVersion", "1, 0, 0, 1"
+            VALUE "FileVersion", "1.0.0.1"
             VALUE "InternalName", "KeywordTest.exe"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2011. All rights reserved."
             VALUE "OriginalFilename", "KeywordTest.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 5, 5, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
