--- a/RegExp/RegExp.rc
+++ b/RegExp/RegExp.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 2,0,0,1
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -45,12 +45,12 @@ BEGIN
         BEGIN
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Regular Expression Library"
-            VALUE "FileVersion", "2, 0, 0, 1"
+            VALUE "FileVersion", "2.0.0.1"
             VALUE "InternalName", "RegExp"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2010. All rights reserved."
             VALUE "OriginalFilename", "RegExp.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
