--- a/bzlib/bzlib.rc
+++ b/bzlib/bzlib.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,6,0
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x17L
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "A program and library for lossless, block-sorting data compression."
             VALUE "CompanyName", "Julian Seward"
             VALUE "FileDescription", "bzlib DLL"
-            VALUE "FileVersion", "1, 0, 6, 0"
+            VALUE "FileVersion", "1.0.6.0"
             VALUE "InternalName", "bzlib"
             VALUE "LegalCopyright", "Copyright (C) 1996-2010 Julian Seward <jseward@bzip.org>"
             VALUE "OriginalFilename", "bzlib.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
