--- a/plugins/7ZipBuilder/7ZipBuilder.rc
+++ b/plugins/7ZipBuilder/7ZipBuilder.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,1,0,1
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "Extract metadata from 7-Zip archives."
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "7-Zip Builder"
-            VALUE "FileVersion", "1, 1, 0, 1"
+            VALUE "FileVersion", "1.1.0.1"
             VALUE "InternalName", "7ZipBuilder"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2008-2011. All rights reserved."
             VALUE "OriginalFilename", "7ZipBuilder.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
