--- a/plugins/ImageViewer/ImageViewer.rc
+++ b/plugins/ImageViewer/ImageViewer.rc
@@ -66,7 +66,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_AUS
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,2,2,0
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -84,12 +84,12 @@ BEGIN
             VALUE "Comments", "Show images."
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Image Viewer Plugin"
-            VALUE "FileVersion", "1, 2, 2, 0"
+            VALUE "FileVersion", "1.2.2.0"
             VALUE "InternalName", "ImageViewer"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2010. All rights reserved."
             VALUE "OriginalFilename", "ImageViewer.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
