--- a/plugins/MediaLibraryBuilder/MediaLibraryBuilder.rc
+++ b/plugins/MediaLibraryBuilder/MediaLibraryBuilder.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,1,0,0
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x21L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "Extract metadata from video files of many formats."
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Media Library Builder Plugin"
-            VALUE "FileVersion", "1, 1, 0, 0"
+            VALUE "FileVersion", "1.1.0.0"
             VALUE "InternalName", "MediaLibraryBuilder"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2005-2010. All rights reserved."
             VALUE "OriginalFilename", "MediaLibraryBuilder.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
             VALUE "SpecialBuild", "plugin"
         END
     END
