--- a/plugins/MediaPlayer/MediaPlayer.rc
+++ b/plugins/MediaPlayer/MediaPlayer.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 2,0,0,0
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x21L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "Play audio and video files."
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Media Player"
-            VALUE "FileVersion", "2, 0, 0, 0"
+            VALUE "FileVersion", "2.0.0.0"
             VALUE "InternalName", "MediaPlayer"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2009-2010. All rights reserved."
             VALUE "OriginalFilename", "MediaPlayer.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
             VALUE "SpecialBuild", "plugin"
         END
     END
