--- a/plugins/SWFPlugin/SWFPlugin.rc
+++ b/plugins/SWFPlugin/SWFPlugin.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,1,0,0
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "Extract metadata and previews from Shockwave files."
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "SWF Library Builder & Image Service Plugins"
-            VALUE "FileVersion", "1, 1, 0, 0"
+            VALUE "FileVersion", "1.1.0.0"
             VALUE "InternalName", "SWFPlugin"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2005-2010. All rights reserved."
             VALUE "OriginalFilename", "SWFPlugin.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
