--- a/plugins/SkinScanSKS/SkinScanSKS.rc
+++ b/plugins/SkinScanSKS/SkinScanSKS.rc
@@ -28,7 +28,7 @@ LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,0,11
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -46,12 +46,12 @@ BEGIN
             VALUE "Comments", "Extract metadata from Shareaza Skins."
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Skin Metadata Extractor"
-            VALUE "FileVersion", "1, 0, 0, 11"
+            VALUE "FileVersion", "1.0.0.11"
             VALUE "InternalName", "SkinScanSKS"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2008-2010. All rights reserved."
             VALUE "OriginalFilename", "SkinScanSKS.dll"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
