--- a/skin-installer/resource.rc
+++ b/skin-installer/resource.rc
@@ -66,7 +66,7 @@ END
 
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,12,7
- PRODUCTVERSION 2,6,0,0
+ PRODUCTVERSION 2,7,0,0
  FILEFLAGSMASK 0x3fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -84,12 +84,12 @@ BEGIN
             VALUE "Comments", "Shareaza Skin Installer"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Skin Installer"
-            VALUE "FileVersion", "1, 0, 12, 7"
+            VALUE "FileVersion", "1.0.12.7"
             VALUE "InternalName", "skin-installer"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2010. All rights reserved."
             VALUE "OriginalFilename", "skin.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2, 6, 0, 0"
+            VALUE "ProductVersion", "2.7.0.0"
         END
     END
     BLOCK "VarFileInfo"
