--- a/BugTrapSort/BugTrapSort.ini
+++ b/BugTrapSort/BugTrapSort.ini
@@ -25,7 +25,7 @@ output=C:\Projects\Shareaza\crashes\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_
 accept=shareaza.exe
 
 ; Ignored module or module:address names while stack parsing, caseinsensitive, use "|" as delimiter
-ignore=btmmhook.dll|version.dll|ieframe.dll|browseui.dll|ntshrui.dll|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|comctl32.dll|comdlg32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|duser.dll|atipdlxx.dll
+ignore=iertutil.dll|btmmhook.dll|version.dll|ieframe.dll|browseui.dll|ntshrui.dll|zlibwapi.dll|msvcrt.dll|ntdll.dll|user32.dll|ole32.dll|oleaut32.dll|gdi32.dll|kernel32.dll|shell32.dll|advapi32.dll|shlwapi.dll|comctl32.dll|comdlg32.dll|mswsock.dll|ws2_32.dll|wininet.dll|devenum.dll|quartz.dll|nvd3dum.dll|atklumdisp.dll|ddraw.dll|kernelbase.dll|duser.dll|atipdlxx.dll|sxs.dll|propsys.dll|gdiplus.dll|rpcrt4.dll|shdocvw.dll|urlmon.dll|mfc100u.dll|msvcr100.dll
 
 ; All other section names treated as sort rule names
 ; [Rule name]
@@ -262,15 +262,20 @@ output=C:\Projects\Shareaza\crashes\codecs\Pure Codec\{MODULE}\{TIMESTAMP}
 ; ------------------------------------------------------------------------
 ; Known bugs
 
-[SSE]
-if={WHAT} {MODULE}
-is=ILLEGAL_INSTRUCTION Shareaza.exe
-output=C:\Projects\Shareaza\crashes\known\SSE\{CPU}\{TIMESTAMP}
-
 [ILLEGAL_INSTRUCTION]
 if={WHAT}
 is=ILLEGAL_INSTRUCTION
-output=C:\Projects\Shareaza\crashes\known\ILLEGAL_INSTRUCTION\{CPU}\{TIMESTAMP}
+output=C:\Projects\Shareaza\crashes\ILLEGAL_INSTRUCTION\{CPU}\{TIMESTAMP}
+
+[FLT_DIVIDE_BY_ZERO]
+if={WHAT}
+is=FLT_DIVIDE_BY_ZERO
+output=C:\Projects\Shareaza\crashes\FLT_DIVIDE_BY_ZERO\{VER_NUMBER}\{VER_REVISION}{VER_CONFIG}{VER_PLATFORM}\{MODULE}\{ADDRESS}\{TIMESTAMP}\
+
+[IN_PAGE_ERROR]
+if={WHAT}
+is=IN_PAGE_ERROR
+output=C:\Projects\Shareaza\crashes\IN_PAGE_ERROR\{TIMESTAMP}
 
 ; ------------------------------------------------------------------------
 ; Bad reports
