Added support for MS Office compatible anti-viruses.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9357 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_10.vcxproj
+++ b/shareaza/Shareaza_10.vcxproj
@@ -297,6 +297,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AlbumFolder.cpp" />
+    <ClCompile Include="AntiVirus.cpp" />
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="AutocompleteEdit.cpp" />
     <ClCompile Include="BENode.cpp" />
@@ -713,6 +714,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AlbumFolder.h" />
+    <ClInclude Include="AntiVirus.h" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="AutocompleteEdit.h" />
     <ClInclude Include="BENode.h" />
