It's now possible to emulate Gnutella 1 or 2 packet processing by pressing "Ctrl+H" on neighbor (in Network tab) and specifying packet as hexadecimal string i.e. "00 01 02 03 ...". Added new CHexDialog class.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9361 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza_10.vcxproj
+++ b/shareaza/Shareaza_10.vcxproj
@@ -329,6 +329,7 @@
     <ClCompile Include="DCPacket.cpp" />
     <ClCompile Include="DDEServer.cpp" />
     <ClCompile Include="DiscoveryServices.cpp" />
+    <ClCompile Include="DlgHex.cpp" />
     <ClCompile Include="Download.cpp" />
     <ClCompile Include="DownloadBase.cpp" />
     <ClCompile Include="DownloadGroup.cpp" />
@@ -746,6 +747,7 @@
     <ClInclude Include="DCPacket.h" />
     <ClInclude Include="DDEServer.h" />
     <ClInclude Include="DiscoveryServices.h" />
+    <ClInclude Include="DlgHex.h" />
     <ClInclude Include="Download.h" />
     <ClInclude Include="DownloadBase.h" />
     <ClInclude Include="DownloadGroup.h" />
